w.output
Terminals which are not used

   tprintint


Grammar

    0 $accept: p $end

    1 p: prog

    2 prog: tstart tfinish
    3     | tstart DL SL tfinish

    4 DL: DL D
    5   | D

    6 D: tid Dtail

    7 Dtail: ',' tid Dtail
    8      | type tid ';'

    9 type: tint
   10     | tstr

   11 SL: SL S
   12   | S

   13 S: tprintstrhoriz tstrlit
   14  | tprintstrhoriz tid
   15  | tprintstrvert tid
   16  | tid tassign expr
   17  | error ';'

   18 expr: expr '+' term
   19     | expr '-' term
   20     | term

   21 term: term '*' factor
   22     | term '/' factor
   23     | factor

   24 factor: tid
   25       | tstr
   26       | tnum
   27       | '(' expr ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 27
')' (41) 27
'*' (42) 21
'+' (43) 18
',' (44) 7
'-' (45) 19
'/' (47) 22
';' (59) 8 17
error (256) 17
tstart (258) 2 3
tfinish (259) 2 3
tint (260) 9
tstr (261) 10 25
tprintint (262)
tprintstrhoriz (263) 13 14
tprintstrvert (264) 15
tassign (265) 16
tstrlit (266) 13
tid (267) 6 7 8 14 15 16 24
tnum (268) 26


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
p (23)
    on left: 1, on right: 0
prog (24)
    on left: 2 3, on right: 1
DL (25)
    on left: 4 5, on right: 3 4
D (26)
    on left: 6, on right: 4 5
Dtail (27)
    on left: 7 8, on right: 6 7
type (28)
    on left: 9 10, on right: 8
SL (29)
    on left: 11 12, on right: 3 11
S (30)
    on left: 13 14 15 16 17, on right: 11 12
expr (31)
    on left: 18 19 20, on right: 16 18 19 27
term (32)
    on left: 21 22 23, on right: 18 19 20 21 22
factor (33)
    on left: 24 25 26 27, on right: 21 22 23


state 0

    0 $accept: . p $end

    tstart  shift, and go to state 1

    p     go to state 2
    prog  go to state 3


state 1

    2 prog: tstart . tfinish
    3     | tstart . DL SL tfinish

    tfinish  shift, and go to state 4
    tid      shift, and go to state 5

    DL  go to state 6
    D   go to state 7


state 2

    0 $accept: p . $end

    $end  shift, and go to state 8


state 3

    1 p: prog .

    $default  reduce using rule 1 (p)


state 4

    2 prog: tstart tfinish .

    $default  reduce using rule 2 (prog)


state 5

    6 D: tid . Dtail

    tint  shift, and go to state 9
    tstr  shift, and go to state 10
    ','   shift, and go to state 11

    Dtail  go to state 12
    type   go to state 13


state 6

    3 prog: tstart DL . SL tfinish
    4 DL: DL . D

    error           shift, and go to state 14
    tprintstrhoriz  shift, and go to state 15
    tprintstrvert   shift, and go to state 16
    tid             shift, and go to state 17

    D   go to state 18
    SL  go to state 19
    S   go to state 20


state 7

    5 DL: D .

    $default  reduce using rule 5 (DL)


state 8

    0 $accept: p $end .

    $default  accept


state 9

    9 type: tint .

    $default  reduce using rule 9 (type)


state 10

   10 type: tstr .

    $default  reduce using rule 10 (type)


state 11

    7 Dtail: ',' . tid Dtail

    tid  shift, and go to state 21


state 12

    6 D: tid Dtail .

    $default  reduce using rule 6 (D)


state 13

    8 Dtail: type . tid ';'

    tid  shift, and go to state 22


state 14

   17 S: error . ';'

    ';'  shift, and go to state 23


state 15

   13 S: tprintstrhoriz . tstrlit
   14  | tprintstrhoriz . tid

    tstrlit  shift, and go to state 24
    tid      shift, and go to state 25


state 16

   15 S: tprintstrvert . tid

    tid  shift, and go to state 26


state 17

    6 D: tid . Dtail
   16 S: tid . tassign expr

    tint     shift, and go to state 9
    tstr     shift, and go to state 10
    tassign  shift, and go to state 27
    ','      shift, and go to state 11

    Dtail  go to state 12
    type   go to state 13


state 18

    4 DL: DL D .

    $default  reduce using rule 4 (DL)


state 19

    3 prog: tstart DL SL . tfinish
   11 SL: SL . S

    error           shift, and go to state 14
    tfinish         shift, and go to state 28
    tprintstrhoriz  shift, and go to state 15
    tprintstrvert   shift, and go to state 16
    tid             shift, and go to state 29

    S  go to state 30


state 20

   12 SL: S .

    $default  reduce using rule 12 (SL)


state 21

    7 Dtail: ',' tid . Dtail

    tint  shift, and go to state 9
    tstr  shift, and go to state 10
    ','   shift, and go to state 11

    Dtail  go to state 31
    type   go to state 13


state 22

    8 Dtail: type tid . ';'

    ';'  shift, and go to state 32


state 23

   17 S: error ';' .

    $default  reduce using rule 17 (S)


state 24

   13 S: tprintstrhoriz tstrlit .

    $default  reduce using rule 13 (S)


state 25

   14 S: tprintstrhoriz tid .

    $default  reduce using rule 14 (S)


state 26

   15 S: tprintstrvert tid .

    $default  reduce using rule 15 (S)


state 27

   16 S: tid tassign . expr

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    expr    go to state 37
    term    go to state 38
    factor  go to state 39


state 28

    3 prog: tstart DL SL tfinish .

    $default  reduce using rule 3 (prog)


state 29

   16 S: tid . tassign expr

    tassign  shift, and go to state 27


state 30

   11 SL: SL S .

    $default  reduce using rule 11 (SL)


state 31

    7 Dtail: ',' tid Dtail .

    $default  reduce using rule 7 (Dtail)


state 32

    8 Dtail: type tid ';' .

    $default  reduce using rule 8 (Dtail)


state 33

   25 factor: tstr .

    $default  reduce using rule 25 (factor)


state 34

   24 factor: tid .

    $default  reduce using rule 24 (factor)


state 35

   26 factor: tnum .

    $default  reduce using rule 26 (factor)


state 36

   27 factor: '(' . expr ')'

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    expr    go to state 40
    term    go to state 38
    factor  go to state 39


state 37

   16 S: tid tassign expr .
   18 expr: expr . '+' term
   19     | expr . '-' term

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42

    $default  reduce using rule 16 (S)


state 38

   20 expr: term .
   21 term: term . '*' factor
   22     | term . '/' factor

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 20 (expr)


state 39

   23 term: factor .

    $default  reduce using rule 23 (term)


state 40

   18 expr: expr . '+' term
   19     | expr . '-' term
   27 factor: '(' expr . ')'

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    ')'  shift, and go to state 45


state 41

   18 expr: expr '+' . term

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    term    go to state 46
    factor  go to state 39


state 42

   19 expr: expr '-' . term

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    term    go to state 47
    factor  go to state 39


state 43

   21 term: term '*' . factor

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    factor  go to state 48


state 44

   22 term: term '/' . factor

    tstr  shift, and go to state 33
    tid   shift, and go to state 34
    tnum  shift, and go to state 35
    '('   shift, and go to state 36

    factor  go to state 49


state 45

   27 factor: '(' expr ')' .

    $default  reduce using rule 27 (factor)


state 46

   18 expr: expr '+' term .
   21 term: term . '*' factor
   22     | term . '/' factor

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 18 (expr)


state 47

   19 expr: expr '-' term .
   21 term: term . '*' factor
   22     | term . '/' factor

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 19 (expr)


state 48

   21 term: term '*' factor .

    $default  reduce using rule 21 (term)


state 49

   22 term: term '/' factor .

    $default  reduce using rule 22 (term)
